--- a/index.html
+++ b/index.html
@@ -2,5 +2,7 @@
 <html>
 <body>
 <h1>Hello World</h1>
+<a href="https://rider-maru.github.io/01">ZERO-One</a>
+<a href="/aims">AIMS</a>
 </body>
 </html>
