--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<a href="https://rider-maru.github.io/01">ZERO-One</a>
-<a href="/aims">AIMS</a>
+<h1>Zero-One Series</h1>
+・<a href="/01">ZERO-One</a><br>
+・<a href="/aims">AIMS</a><br>
+　・<a href="/aims/final">RampageBullet</a><br>
+・<a href="/net">.Net</a><br>
+・<a href="/zaia">ZAIA</a><br>
 </body>
 </html>
