--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 <body>
 <h1>Zero-One Series</h1>
-<a href="/01">ZERO-One</a><br>
-<a href="/aims">AIMS</a> (<a href="/aims/final">RampageBullet</a>)<br>
-<a href="/net">滅亡迅雷</a><br>
-<a href="/zaia">ZAIA</a><br>
+・<a href="/01">ZERO-One</a><br>
+・<a href="/aims">AIMS</a><br>
+　・<a href="/aims/final">RampageBullet</a><br>
+・<a href="/net">滅亡迅雷</a><br>
+・<a href="/zaia">ZAIA</a><br>
 </body>
 </html>
