--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 ・<a href="/aims">AIMS</a><br>
 　・<a href="/aims/final">RampageBullet</a><br>
 ・<a href="/net">滅亡迅雷</a><br>
-・<a href="/zaia">ZAIA</a><br>
+・<a href="/1000">ZAIA</a><br>
 </body>
 </html>
